--- a/catalog/templates/catalog/footer.html
+++ b/catalog/templates/catalog/footer.html
@@ -1,5 +1,67 @@
 {% load static %}
-    
+            <footer class="wrapper wrapper-footer">
+              <nav class="navbar navbar-default">
+                  <ul class="nav-colophon nav navbar-nav">
+                      <li>
+                        <a id="about" href="/about">À propos</a>
+                      </li>
+                      <li>
+                        <a id="news" href="/news">Nouvelles</a>
+                      </li>
+                      <li>
+                        <a id="contact" href="/contact">Nous joindre</a>
+                      </li>
+                  </ul>
+                  
+                  <ul class="nav-legal nav navbar-nav">
+                    <li>
+                      <a href="/tos">Conditions générales du service</a>
+                    </li>
+                    <li>
+                      <a href="/privacy">Politique de confidentialité</a>
+                    </li>
+                    <li>
+                      <a href="/honor">Code d'honneur</a>
+                    </li>
+                  </ul>
+                    
+                    <ul class="social-media-links nav navbar-nav navbar-right">
+                        <li>
+                            <a href="https://www.facebook.com/EDUlib.org" class="sm-link external" title="Facebook" rel="noreferrer">
+                                <span class="fab fa-facebook-square" aria-hidden="true"></span>
+                                <span class="sr-only">Aimer EDUlib sur Facebook</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/EDUlib_ORG" class="sm-link external" title="Twitter" rel="noreferrer">
+                                <span class="fab fa-twitter" aria-hidden="true"></span>
+                                <span class="sr-only">Suivre EDUlib sur Twitter</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://plus.google.com/110600315362683382156/" class="sm-link external" title="Google+" rel="noreferrer">
+                                <span class="fab fa-google-plus-square" aria-hidden="true"></span>
+                                <span class="sr-only">Suivre EDUlib sur Google+</span>
+                            </a>
+                        </li>
+                    </ul>
+                      
+                  </nav>
+
+
+
+
+                  <p class="copyright">
+                   © 2018&nbsp;<a href="/"><img class="footer-logo" alt="EDUlib" src="/static/catalog/images/edulib.png"></a>. &nbsp;
+                    EdX, Open edX, ainsi que les logos edX et Open edX sont des marques déposées ou marques de <a href="https://www.edx.org/">edX Inc.</a>
+                    <a class="openedx-link" href="http://openedx.org/">
+                      <img src="/static/catalog/images/edx-openedx-logo-tag.png" alt="Propulsé par Open edX" width="140">
+                    </a>
+                  </p>
+                
+              </footer>
+            
+
         </main>
     </div>
     
