--- a/catalog/templates/catalog/unknown.html
+++ b/catalog/templates/catalog/unknown.html
@@ -1,35 +1,13 @@
 {% load static %}
-
-{# needed for boostrap #}
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-{# needed for boostrap #}
-
-{# navigation bar from boostrap #}
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            {# <a class="navbar-brand" href="{% url 'index' %}">EDUlib</a> #}
-            <a class="navbar-brand" href="{{ EDULIB_CATALOG }}">
-            <img src="/static/catalog/images/edulib.png" width="75px"/>
-            </a>
-        </div>
-        <div class="container2">
-                <div class="dropdown">
-                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Institutions
-                <span class="caret"></span></button>
-                <ul class="dropdown-menu">
-                   <li><a href="/umontreal">UMontreal</a></li>
-                   <li><a href="/hec">HEC</a></li>
-                   <li><a href="/polymtl">PolyMtl</a></li>
-                </ul>
-                </div>
-        </div>
-    </div>
-</nav>
-{# navigation bar from boostrap #}
-
-<link rel="stylesheet" type="text/css" href="{% static 'catalog/css/style.css' %}" />
-
-<h1>D&eacute;sol&eacute; aucun cours disponible pour cette institution</h1>
+{% include "catalog/header.html" %}
+        <section class="home">
+          <header class="outer-wrapper">
+              <hgroup class="title">
+                    <h1>D&eacute;sol&eacute; aucun cours disponible pour cette institution</h1>
+              </hgroup>
+            </header>
+            
+            
+            <section class="courses-container container">
+            </section>
+{% include "catalog/footer.html" %}
