Removed superfluous setting and modified the unknown html page.

--- a/catalog/templates/catalog/unknown.html
+++ b/catalog/templates/catalog/unknown.html
@@ -3,7 +3,7 @@
         <section class="home">
           <header class="outer-wrapper">
               <hgroup class="title">
-                    <h1>D&eacute;sol&eacute; aucun cours disponible pour cette institution</h1>
+                    <h1>La page que vous cherchez n'existe pas.</h1>
               </hgroup>
             </header>
             
