--- a/catalog/templates/catalog/org_index.html
+++ b/catalog/templates/catalog/org_index.html
@@ -23,7 +23,7 @@
                                 <article class="course" id="{{ each.key }}" role="region" aria-label="{{ each.title }}">
                                     <a href="{{ EDULIB_LMS }}/courses/{{ each.key }}/about">
                                         <header class="course-image">
-                                                <img src="{{ each.image.src }}" />
+                                                <img alt="{{ each.title }}" src="{{ EDULIB_DISCO }}{{ each.image.src }}" />
                                                 <div class="learn-more" aria-hidden=true>EN SAVOIR PLUS</div>
                                         </header>
                                         <ul class="course-info">
@@ -53,7 +53,7 @@
                                 <article class="course" id="{{ each.key }}" role="region" aria-label="{{ each.title }}">
                                     <a href="{{ EDULIB_LMS }}/courses/{{ each.key }}/about">
                                         <header class="course-image">
-                                                <img src="{{ each.image.src }}" />
+                                                <img alt="{{ each.title }}" src="{{ EDULIB_DISCO }}{{ each.image.src }}" />
                                                 <div class="learn-more" aria-hidden=true>EN SAVOIR PLUS</div>
                                         </header>
                                         <ul class="course-info">
@@ -83,7 +83,7 @@
                                 <article class="course" id="{{ each.key }}" role="region" aria-label="{{ each.title }}">
                                     <a href="{{ EDULIB_LMS }}/courses/{{ each.key }}/about">
                                         <header class="course-image">
-                                                <img src="{{ each.image.src }}" />
+                                                <img alt="{{ each.title }}" src="{{ EDULIB_DISCO }}{{ each.image.src }}" />
                                                 <div class="learn-more" aria-hidden=true>EN SAVOIR PLUS</div>
                                         </header>
                                         <ul class="course-info">
