--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -20,7 +20,7 @@
                                 <article class="course" id="{{ each.key }}" role="region" aria-label="{{ each.title }}">
                                     <a href="{{each.courseURL}}">
                                         <header class="course-image">
-                                                <img alt="{{ each.title }}" src="{{ each.image.src }}" />
+                                                <img alt="{{ each.title }}" src="{{ each.image_src }}" />
                                                 <div class="learn-more" aria-hidden=true>EN SAVOIR PLUS</div>
                                         </header>
                                         <ul class="course-info">
@@ -50,7 +50,7 @@
                                 <article class="course" id="{{ each.key }}" role="region" aria-label="{{ each.title }}">
                                     <a href="{{each.courseURL}}">
                                         <header class="course-image">
-                                                <img alt="{{ each.title }}" src="{{ each.image.src }}" />
+                                                <img alt="{{ each.title }}" src="{{ each.image_src }}" />
                                                 <div class="learn-more" aria-hidden=true>EN SAVOIR PLUS</div>
                                         </header>
                                         <ul class="course-info">
