--- a/catalog/templates/catalog/org_index.html
+++ b/catalog/templates/catalog/org_index.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% include "catalog/header.html" %}
+{% include header %}
         <section class="home">
             <header class="outer-wrapper institution">
                 <hgroup class="title">
