--- a/catalog/templates/catalog/unknown.html
+++ b/catalog/templates/catalog/unknown.html
@@ -3,11 +3,13 @@
         <section class="home">
           <header class="outer-wrapper">
               <hgroup class="title">
-                    <h1>La page que vous cherchez n'existe pas.</h1>
+                <h1><a href="/">Error page / Page d'erreur</a></h1>
               </hgroup>
             </header>
             
             
             <section class="courses-container container">
+                <h2>La page que vous cherchez n'existe pas.</h2>
+                <h2>The page you are looking for doesn't exist.</h2>
             </section>
 {% include "catalog/footer.html" %}
